<resources>
    <string name="app_name">EmploiHunt</string>
    <string name="title_activity_job_register1">JobRegisterActivity1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="recruiter">Recruiter</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="friends_list">Friends List</string>
    <string name="recruiters_list">Recruiters List</string>
    <string name="hh_mm_ss">HH:mm:ss</string>
    <string name="short_lorem_ipsum">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.</string>
    <string name="msg_log_out">Are you sure logout\n\n</string>
    <string name="m_log_out">Logout\n</string>
    <string name="loading">Loading</string>
    <string name="channel_name">Recruitment App</string>
    <string name="permission_title">Need Permissions</string>
    <string name="permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="permission_go_to_settings">GOTO SETTINGS</string>
    <string name="cancel">cancel</string>
    <string name="please_wait">Please wait…</string>
    <string name="plz_enable_gps">Please enable GPS</string>
    <string name="job_role_amp_responsibility"><![CDATA[Job Role & Responsibility]]></string>
    <string name="job_level">Job level</string>
    <string name="retry">Retry</string>
    <string name="msg_no_campus_found">Sorry! at this moment no any campus placement are Available.</string>
    <string name="msg_no_job_found">Umm… We searched fat and wide and couldn\'t find data matching your search. Let\'s check with another one.</string>
    <string name="msg_no_job_found_save_job">Umm… We finding your save job and couldn\'t find data matching your saved job.</string>
    <string name="msg_server_maintenance">The server is under maintenance. We really appreciate your patience and support. Please wait and try after some time.</string>
    <string name="msg_no_internet">Check your internet connection or\nclick to Retry</string>
    <string name="msg_enable_internet">Please enable internet connection</string>
    <string name="something_error">Something went Wrong</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="default_internet_message">There is problem with internet connection. Please check network.</string>
    <string name="thank_you_dear_candidate_please_wait_hr_are_contact_soon">Thank you dear Candidate. Please wait %1$s HR will contact soon</string>
    <string name="view_applylist">View ApplyList</string>
    <string name="job_preference">Job Preference</string>
    <string name="save_job">Save Job</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="profile">Profile</string>
    <string name="today">Today, </string>
    <string name="yesterday_with_dash">Yesterday, </string>
    <string name="yesterday">Yesterday</string>
    <string name="just_now">Just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="minutes_ago">&#160;minutes ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hours_ago">&#160;hours ago</string>
    <string name="days_ago">&#160;days ago</string>
    <string name="apply">Apply</string>
    <string name="already_applied">Already Applied</string>
    <string name="role_amp_responsibility"><![CDATA[Role & Responsibility]]></string>
    <string name="your_applied_job">Your Applied job</string>
    <string name="what_type_of_job_are_you_looking">what type of job are you looking</string>
    <string name="_2_5">2/5</string>
    <string name="add_job_preference">+ Add Job Preference</string>
    <string name="job_title">Job Title</string>
    <string name="expected_salary">Expected Salary</string>
    <string name="picked_team">Picked Team</string>
    <string name="location">Location</string>
    <string name="update">Update</string>
    <string name="opps_job_preference_full">Opps! Job Preference Full</string>
    <string name="saved_job">Saved Job</string>
    <string name="your_job_posts">Manages Jobs</string>
    <string name="cancel_update">Cancel Update</string>
    <string name="on_site">On-Site</string>
    <string name="remote">Remote</string>
    <string name="hybrid">Hybrid</string>
    <string name="job_location">Job Location</string>
    <string name="applied_candidate_list">Applied Candidate List</string>
    <string name="no_applied_candidate_s_found">No Applied Candidate\'s found.</string>
    <string name="bio">Bio</string>
    <string name="resume">Resume</string>
    <string name="your_job_post_deleted_successfully">"Your job post deleted Successfully "</string>
    <string name="ok">Ok</string>
    <string name="voice_search">Voice search</string>
    <string name="delete">Delete</string>
    <string name="filter">Filter</string>
    <string name="tag">tag</string>
    <string name="filter_jobs">Filter jobs</string>
    <string name="messenger">Messenger</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="setting">Setting</string>
    <string name="post">Post</string>
    <string name="filter_applications_here">Filter applications here</string>
    <string name="enter_another_first_name">Enter another first name</string>
    <string name="enter_another_last_name">Enter another last name</string>
    <string name="enter_another_first_last_name">Enter another first &amp; last name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="first_last_name_not_same">First &amp; Last name can not be same</string>
    <string name="first_last_name_required_min_2_letters">First &amp; Last name required Min 3 letters</string>
    <string name="first_last_name_should_be_character">First &amp; Last name should be in character</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_a_6_digit_one_time_password_to_this_number">We will send you a 6-digit one-time password to this number</string>
    <string name="enter_the_verification_code">Enter the Verification Code</string>
    <string name="you_can_change_phone_number"><u>Change phone number?</u></string>
    <string name="verify">Verify</string>
    <string name="register">Register</string>
    <string name="didn_t_get_proper_user_type">Didn\'t get proper user type</string>
    <string name="incorrect_view_holder">Incorrect view holder : %1$s</string>
    <string name="file_name">File name</string>
    <string name="wait_while_uploading">Wait while uploading...</string>
    <string name="cancel_post">Cancel Post</string>
    <string name="post_job">Post Job</string>
    <string name="a_new_version_of_the_app_is_available_it_s_time_to_update_bhadegadiwala_app">A new version of the app is available.Update EmploiHunt App.</string>
    <string name="you_have_to_not_enough_balance_please_add_money_in_wallet">You have insufficient coins. Please add coin to your wallet.</string>
    <string name="update_details">Update details</string>
    <string name="your_account_has_been_blocked_due_to_unauthenticated_activities_please_contact_to_bhadegadiwala_app_or_call_on_917990380970">Your account has been blocked due to unauthenticated activities. Please contact to EmploiHunt app or call on +918469000537</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="terms_amp_amp_condition">Terms &amp; Condition</string>
    <string name="campus">Campus</string>
    <string name="expire1">%dd %dh %dm Remaining</string>
    <string name="expire2">%dh %dm Remaining</string>
    <string name="expire3">%dm Remaining</string>
    <string name="are_you_want_to_sure_for_apply_for_placement">Are You want to sure for apply %1$s for placement</string>
    <string name="designation">Designation\t</string>
    <string name="company_name">Company name</string>
    <string name="duration">Duration</string>
    <string name="add">Add</string>
    <string name="expertise">Expertise</string>
    <string name="qualification">Qualification</string>
    <string name="fresher">Fresher</string>
    <string name="experienced">Experienced</string>
    <string name="residential_city">Residential City</string>
    <string name="about">About</string>
    <string name="experience">Experience</string>
    <string name="show_more">show more\n</string>
    <string name="current_position">Current position</string>
    <string name="working_mode">Working mode</string>
    <string name="applicant_name">Applicant name\n</string>
    <string name="applicant_designation">Applicant Designation</string>
    <string name="prefer_city">Prefer City</string>
    <string name="not_match_any_data_based_on_your_filter">Not match any data based on your filter</string>
    <string name="show_less">Show less</string>
    <string name="are_you_experienced_or_fresher">Are you experienced or fresher?</string>
    <string name="tell_about_your_self">Tell about your self</string>
    <string name="current_position_details">Current Position Details</string>
    <string name="your_job_preference">Your job Preference</string>
    <string name="select_your_resume">Select Your Resume</string>
    <string name="profile_image">Profile Image</string>
    <string name="select_your_prefer_working_mode">Select your prefer working mode</string>
    <string name="choose_pdf_file">Choose Pdf File</string>
    <string name="no_file_chosen">No File Chosen</string>
    <string name="select_your_qualification">Select your Qualification</string>
    <string name="server_is_under_maintenance">Server is under maintenance</string>
    <string name="msg_edit_no">Are you sure change the phone number?</string>
    <string name="edit">Edit</string>
    <string name="_1_00">00:30</string>
    <string name="otp_timer">Resend OTP in %d seconds</string>
    <string name="lpa">%1$s LPA +</string>
    <string name="select_your_working_mode">Select your working mode</string>
    <string name="college_name">College Name</string>
    <string name="_18_hours_remaining">18 Hours remaining</string>
    <string name="job_role">Job Role</string>
    <string name="vacancy">Vacancy</string>
    <string name="required_qualifications">Required qualifications</string>
    <string name="required_job_role">Required Job Role</string>
    <string name="select_your_organization_logo">Select your Organization logo</string>
    <string name="required_technical_skills">Required Technical Skills</string>
    <string name="required_soft_skills">Required Soft Skills</string>
    <string name="required_experience">Required Experience</string>
    <string name="education">Education</string>
    <string name="job_description">Job description</string>
    <string name="required_education">Required Education</string>
    <string name="present">Present</string>
    <string name="applied_candidate_profile">Applied Candidate Profile</string>
    <string name="please_let_us_know_if_you_have_any_query">Please let us know if you have any query</string>
    <string name="opps_can_t_find_user">Opps! Can\'t find user</string>
    <string name="opps_no_any_jos_post">Opps! No Any jos post</string>
    <string name="add_new_experience">Add New Experience</string>
    <string name="some_thing_wrong_try_later">" Something wrong \n Please try again Later... "</string>
</resources>