<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btnSearch"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item android:id="@+id/btnVoiceSearch"
        android:title="@string/voice_search"
        android:icon="@drawable/ic_voice"
        app:showAsAction="ifRoom|collapseActionView"
        />

    <item android:id="@+id/btnMessenger"
        android:title="@string/messenger"
        android:icon="@drawable/ic_messenger"
        app:showAsAction="ifRoom|collapseActionView"
        />

    <item
        android:id="@+id/btnLogout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="ifRoom|collapseActionView"/>

</menu>