<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:id="@+id/ll_main"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_des1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_new_version_of_the_app_is_available_it_s_time_to_update_bhadegadiwala_app"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            />

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_details"
            android:textColor="@color/blue"
            android:textSize="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <TextView
            android:id="@+id/tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have_to_not_enough_balance_please_add_money_in_wallet"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_8sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_update"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:singleLine="true"
                android:backgroundTint="@color/blue"
                android:textColor="@color/white"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textSize="@dimen/_10sdp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_no"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_31sdp"
                
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center"
                android:background="@drawable/button_negative_drawble"
                android:textColor="@color/blue"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp" />



        </LinearLayout>
    </LinearLayout>

</LinearLayout>