<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/experienceLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible" >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDelete"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_delete"
        android:visibility="visible"
        app:backgroundTint="@color/white"
        app:elevation="@dimen/_4sdp"
        app:fabCustomSize="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:maxImageSize="@dimen/_10sdp"
        app:tint="@color/blue"
        app:useCompatPadding="false" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:visibility="visible"
        app:cardElevation="@dimen/_3sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentPadding="@dimen/_10sdp"
        android:layout_margin="@dimen/_5sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/designation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/designation"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="#FF02397C"
                android:textStyle="bold"
                android:visibility="visible"
                android:lines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/companyName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:visibility="visible"
                android:lines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toStartOf="@id/duration"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/designation" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:visibility="visible"
                android:lines="1"
                android:ellipsize="end"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/companyName"
                app:layout_constraintTop_toBottomOf="@id/designation"
                app:layout_constraintWidth_default="wrap" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="companyName,duration"
                app:flow_horizontalStyle="spread_inside"
                app:flow_verticalStyle="packed"
                app:flow_wrapMode="chain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/designation"
                app:layout_constraintBottom_toTopOf="@+id/jobLocation"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/jobLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/job_location"
                android:textColor="@color/gray"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:visibility="visible"
                android:lines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@id/companyName"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/companyName"
                app:layout_constraintTop_toBottomOf="@id/flow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>
